<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/calculator"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutSum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_input_layout"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textSum"
                    android:textColor="@color/colorNameText"
                    android:textSize="13sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCountDay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/background_input_layout"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"

                app:layout_constraintEnd_toStartOf="@id/layoutPercent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSum">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textDay"
                    android:textColor="@color/colorNameText"
                    android:textSize="10sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:importantForAutofill="no"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPercent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_input_layout"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"

                app:layout_constraintStart_toEndOf="@id/layoutCountDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSum">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textPercent"
                    android:textColor="@color/colorNameText"
                    android:textSize="10sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:importantForAutofill="no"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonCalculator"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/Calculate"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/layoutCountDay">
            </Button>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Условия"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Сумма"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Ставка"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="60dp"
                android:layout_marginEnd="90dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Срок"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="90dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Сумма к возврату:"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="150dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Переплата:"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="180dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:id="@+id/valueSum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="------"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="60dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:id="@+id/valueDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="------"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="90dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

            <TextView
                android:id="@+id/valuePercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="------"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="60dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <TextView
                android:id="@+id/sumRez"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="------"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="150dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <TextView
                android:id="@+id/overpayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="------"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"

                android:layout_marginTop="180dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@id/buttonCalculator"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"

        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView" />

</androidx.constraintlayout.widget.ConstraintLayout>